Implement remaining proxy performance work