@@ -16,6 +16,10 @@ subprojects {
         }
     }
 
+    tasks.withType<JavaCompile>().configureEach {
+        options.compilerArgs.add("--enable-preview")
+    }
+
     dependencies {
         testImplementation(rootProject.libs.junit)
     }
@@ -24,6 +28,7 @@ subprojects {
         useJUnitJupiter()
         targets.all {
             testTask.configure {
+                jvmArgs("--enable-preview")
                 reports.junitXml.required = true
             }
         }
